Fix nav buttons display on mobile devices

--- a/app.css
+++ b/app.css
@@ -27,7 +27,7 @@ h1,h2,h3,h4,h5,h6{font-family:'Cabin',sans-serif;}
 
 /* parallax */
 .parallax-window {
-    min-height: 400px;
+    min-height: 50%;
     background: transparent;
 }
 
